# canigeta

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/simple/: client.py  server.py
src/canigeta/: response.py
