[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canigeta"
version = "0.0.1"
authors = [
  { name="Samuel Coles", email="me@smurf.codes" },
]
description = "Helpful decorators for the requests library. Allows you to return typed REST responses."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/smurf/canigeta"
Issues = "https://github.com/smurf/canigeta/issues"
